prevent clic to avoid keyboard pop up on mobiles and restyled dat gui

--- a/abraham-rabago-web/src/index.css
+++ b/abraham-rabago-web/src/index.css
@@ -72,3 +72,15 @@ html {
     width: 100% !important;
   }
 }
+
+/* DAT.UI */
+li.cr.color{
+  background-color: #805075 !important;
+}
+div.close-button.close-bottom{
+  background-color: #a50b82 !important;
+}
+
+input{
+  pointer-events: none !important;
+}
